# yasbd-auxlang

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yml  publish.yml
src/yasbd_conlang/: __init__.py
tests/: test_segmentation.py
tests/test_data/: esperanto.py  ido.py  interlingua.py  interlingue.py
yasbd_auxlang/: __init__.py  eo.py  ia.py  ie.py  io.py
yasbd_conlang/: __init__.py  eo.py  ia.py
